feat: traduccion completa al espanol - Analisis de Minutos, Llamadas en el Tiempo, Resultados de Llamadas + GitHub Actions CI/CD

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,14 @@ ENCRYPTION_KEY=your_encryption_key_here
 # URL de la aplicación (para desarrollo local)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
+# =====================================================
+# VAPI (API de voz)
+# =====================================================
+
+# API Key de Vapi para obtener datos de llamadas
+# Obtenla en: https://dashboard.vapi.ai → Settings → API Keys
+VAPI_API_KEY=your_vapi_api_key_here
+
 # Entorno (development, staging, production)
 NODE_ENV=development
 
